--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,31 @@
 
 /* Your CSS Code here. */
+.bx1{
+	width:395px;
+	height:210px;
+	border:1px solid black;
+	background-color:#5B49F7;
+}
+.bx2{
+	width:330x;
+	height:145px;
+	border:15px solid blue;
+	margin:20px;
+	background-color:#01AEBF;
+}
+.bx3{
+	position:relative;
+	border:1px solid black;
+	padding:50px;
+	height:10px;
+	top:15px;
+	left:20px;
+	width:180px
+}
+#para{
+/* 	border:1px solid; */
+	position:absolute;
+	left:15px;
+	top:15px;
+	width:250px;
+}
