--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,7 @@
-
-/* Your CSS Code here. */
-.bx1{
+div{
 	width:300px;
-	height:210px;
-	border:1px solid black;
-	background-color:rgb(173,216,230);
-}
-.bx2{
-	width:330x;
-	height:145px;
+	background-color:lightblue;
 	border:15px solid blue;
 	margin:20px;
-	background-color:#01AEBF;
-}
-.bx3{
-	position:relative;
-	border:1px solid black;
 	padding:50px;
-	height:10px;
-	top:15px;
-	left:20px;
-	width:90px
-}
-#para{
-	position:absolute;
-	left:15px;
-	top:-2px;
-	width:150px;
-	height:80px;
 }
